KNOX-2099 - Using the default port of the protocol when no port is declared in the URL when building truststore. (#189)